--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Frontend for English Teaching Voice Agent powered by Vapi",
   "private": true,
   "dependencies": {
+    "@daily-co/daily-js": "^0.82.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vapi-ai/web": "^1.4.2",
+    "@vapi-ai/web": "^2.3.8",
     "autoprefixer": "^10.4.14",
     "lucide-react": "^0.263.1",
     "postcss": "^8.4.24",
